# dummy-superproject

./: .gitmodules  CMakeLists.txt
.github/: dependabot.yml
.github/workflows/: auto_update_submodule.yaml
executable/: CMakeLists.txt
executable/src/: main.cc
